--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,7 +107,12 @@ jobs:
   deploy-pages:
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
-    environment: github-pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Prepare site
